[package]
name = "twilio-rust"
version = "1.0.0"
authors = ["ldeconantsesznak@gmail.com"]
description = "This is a twilio API client generated via openAPI and slightly modified"
license = "Apache 2.0"
repository = "https://github.com/LukasDeco/twilio-rust"
homepage = "https://github.com/LukasDeco/twilio-rust"
readme = "https://github.com/LukasDeco/twilio-rust/blob/main/README.md"
keywords = ["Twilio"]
categories = ["api-bindings"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
